# nimo

./: README.md  pyproject.toml  setup.py
docs/en/: ai_tools_manual_en.html  api.html  basic_usage.html  genindex.html  gui.html  index.html  install.html  introduction.html  ivoryos.html  main_sample.html  nimo.ai_tools.html  nimo.html  nimo.input_tools.html  nimo.output_tools.html  nimo.visualization.html  nimsos.ai_tools.html  nimsos.html  nimsos.input_tools.html  nimsos.output_tools.html  nimsos.visualization.html  objects.inv  py-modindex.html  references.html  search.html  searchindex.js
docs/ja/: ai_tools_manual.html  api.html  basic_usage.html  genindex.html  gui.html  index.html  install.html  introduction.html  ivoryos.html  main_sample.html  nimo.ai_tools.html  nimo.html  nimo.input_tools.html  nimo.output_tools.html  nimo.visualization.html  nimsos.ai_tools.html  nimsos.html  nimsos.input_tools.html  nimsos.output_tools.html  nimsos.visualization.html  objects.inv  py-modindex.html  references.html  search.html  searchindex.js
example/: analysis_output_functions_SO_Sphere.py  candidates_SO_Sphere.csv  nimo_main_functions.ipynb  nimo_main_functions.py  nimo_main_functions_GC.ipynb  preparation_input_functions.py
examples/: al-si-zn_352.csv  al-si-zn_67.csv  candidates.csv  cu-mg-zn_352.csv  cu-mg-zn_67.csv  nimo_main_blox_multi.ipynb  nimo_main_physbo.ipynb  nimo_main_physbo_multi.ipynb
nimo/: __init__.py  nimo_modules.py
nimo/ai_tools/: ai_tool_blox.py  ai_tool_bomp.py  ai_tool_combi.py  ai_tool_doe.py  ai_tool_es.py  ai_tool_llmep.py  ai_tool_nts.py  (+7 more)
(+34 files in other folders)
