[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["nimo", "nimo.ai_tools", "nimo.input_tools", "nimo.output_tools", "nimo.visualization"]

[project]
name = "nimo"
version = "2.0.4"
description = "NIMO package"
readme = "README.md"
authors = [
    { name = "NIMO developers" }
]
license = "MIT"
dependencies = [
    "matplotlib",
    "numpy",
    "physbo>=3.1.0",
    "scikit-learn",
    "scipy",
    "pyDOE3"
]
